--- a/dev-blog-admin-ui/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/dev-blog-admin-ui/src/app/layout/default-layout/default-header/default-header.component.html
@@ -13,13 +13,10 @@
     </button>
     <c-header-nav class="d-none d-md-flex">
       <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Home page</a>
       </c-nav-item>
       <c-nav-item>
-        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>
+        <a cNavLink routerLink="/system/users" routerLinkActive="active">Users</a>
       </c-nav-item>
     </c-header-nav>
 
